--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Jack·s",
   "license": "ISC",
   "devDependencies": {
-    "json-server": "^0.8.21"
+    "faker": "^3.1.0",
+    "json-server": "^0.8.21",
+    "lodash": "^4.16.1"
   }
 }
